--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@babel/core": "~7.14.5",
 		"babel-watch": "~7.4.1",
 		"commander": "~7.2.0",
+		"eslint": "~7.28.0",
 		"jest": "~27.0.4",
 		"prettier": "~2.3.1"
 	},
